[package]
name = "pi_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
chrono = "0.4"

[[bin]]
name = "pi_play"
path = "src/main.rs"

[lib]
name = "pi_play_lib"
path = "src/lib.rs"